CHANGELOG
=========

DarkElements version 3.3 - january 2016
- updated file style
- updated file custom-editor-style
- updated file functions

DarkElements version 3.2 - december 2015
- bugfix: included the register_default_headers again because it did not work without

DarkElements version 3.1 - december 2015
- file functions: removed register_default_headers (default header already included in after_setup_theme)
- several files: updated postmetadata
- file style: several modifications
- several small adjustments
- updated pot file

DarkElements version 3.0 - november 2015
- updated archive.php (added the_archive_title and the_archive_description)
- updated pot file
- removed translations (to support language packs from wordpress.org)
- several small adjustments

DarkElements version 2.7 - september 2015
- updated file comments
- updated pagelink
- file footer: copyrights
- file archive and index: added pagetitle when no posts are found
- changed postmetadata heading into div
- removed background color from post and page editor
- reordered mobile stylesheet
- added Swedish translation (thanks Stefan)
- updated language files
- several small adjustments

DarkElements version 2.5 - june 2015
- file page and single: fixed closing div
- file single: removed if statement 
- file functions, comments and style: changed alignment of comment nav
- reordered file style
- updated file readme

DarkElements version 2.4 - april 2015
- several small adjustment in stylesheet
- removed support for document title in older WP versions 
- files index and archive: pagination inside loop

DarkElements version 2.3 - february 2015
- added Spanish translation (thanks Miquel)
- added German translation (thanks Frank)
- updated French translation (thanks Ollie)
- file style: adjusted styling comments area
- file style: added support in Chrome for Checkbox, Radio and Select
- file style and file custom-editor-style: finetuned img position in post and page